# colmapToXml

./: 0.txt  CMakeLists.txt  github
app/: main.cpp
config/: config.toml
data/0/: cameras.txt  images.txt  points3D.txt  project.ini
include/: alignment.h  cameras.hpp  images.hpp  project.hpp  utils.h
temp/: cameras copy.cpp  cameras copy.hpp
test/: test  test.cpp
